tests/compile-fail/compile_fail__type_error__stackless__jump_general_expr.snap
---
source: tests/compile-fail.rs
expression: stderr
---
error: type error
   ┌─ <input>:28:17
   │
28 │             if (3.0) goto label;
   │                 ^^^ a float
   │
   = an integer is required


